# music_app

./: .gitignore  main.py  pyproject.toml
config/: config.ini  token.json
dev/legacy_ui/: main.ui  selection.ui  upload_music.ui
dev/ui/: authorization.ui  main.ui  music.ui  registration.ui  search.ui  side_bar.ui
src/authorization/: widget.py  widget_ui.py
src/login/: widget.py
src/main/: main_widget.py  main_window.py  widget_ui.py
src/music/: widget.py  widget_ui.py
src/registration/: widget.py  widget_ui.py
src/search/: widget.py  widget_ui.py
src/selection/: widget.py
src/settings/: config.py  settings.py  thread_manager.py  utils.py
src/side_bar/: side_bar_widget.py  widget.py  widget_ui.py
src/tray/: widget.py
src/ui/main/: main_widget_ui.py
src/ui/music/: music_widget_uii.py
src/ui/selection/: selection_widget_ui.py
src/ui/side_bar/: side_bar_widget_ui.py
src/upload/: widget.py  widget_ui.py
