[tool.poetry]
name = "music-app"
version = "0.1.0"
description = ""
authors = ["ledxdeliveryflopp <korstim18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.7.3"
nuitka = "^2.4.8"
httpx = "^0.27.2"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"
librosa = "^0.10.2.post1"
mutagen = "^1.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
